--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,6 +45,7 @@
    "source": [
     "speeches = pd.read_parquet(\"data/results/fine_tune_prompt_2/gpt-3.5-turbo_speeches.parquet\")\n",
     "press_conferences = pd.read_parquet(\"data/results/fine_tune_prompt_2/fine_tune_prompt_2_press_conferences.parquet\")\n",
+    "\n",
     "hawkishness = pd.concat([speeches[\"hawk_score_1\"], press_conferences[\"hawk_score_1\"]]).dropna().sort_index()"
    ]
   },
@@ -153,9 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hawkishness' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/benjamin/Documents/Projects/Code/Python/fed-sentiment/testing.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/benjamin/Documents/Projects/Code/Python/fed-sentiment/testing.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m corr_df_logs \u001b[39m=\u001b[39m tst\u001b[39m.\u001b[39mget_correlation_df(hawkishness, two_year, \u001b[39mTrue\u001b[39;00m, \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m, \u001b[39m101\u001b[39m, \u001b[39m10\u001b[39m), \u001b[39mrange\u001b[39m(\u001b[39m-\u001b[39m\u001b[39m60\u001b[39m, \u001b[39m61\u001b[39m, \u001b[39m10\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/benjamin/Documents/Projects/Code/Python/fed-sentiment/testing.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m corr_df_levels \u001b[39m=\u001b[39m tst\u001b[39m.\u001b[39mget_correlation_df(hawkishness, two_year, \u001b[39mFalse\u001b[39;00m, \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m,\u001b[39m101\u001b[39m,\u001b[39m10\u001b[39m), \u001b[39mrange\u001b[39m(\u001b[39m-\u001b[39m\u001b[39m60\u001b[39m,\u001b[39m61\u001b[39m,\u001b[39m10\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hawkishness' is not defined"
+     ]
+    }
+   ],
    "source": [
     "corr_df_logs = tst.get_correlation_df(hawkishness, two_year, True, range(10, 101, 10), range(-60, 61, 10))\n",
     "corr_df_levels = tst.get_correlation_df(hawkishness, two_year, False, range(10,101,10), range(-60,61,10))"
